[package]
name = "adventofcode2020"
version = "2020.12.1"
authors = ["Thomas Zumsteg <thomas.zumsteg@gmail.com>"]
edition = "2018"

[dependencies]
itertools="0.9.0"
regex="1.4.2"

[lib]
name = "common"
path = "lib.rs"

[[bin]]
name = "day01"
path = "day01.rs"

[[bin]]
name = "day02"
path = "day02.rs"
