[package]
name = "adventofcode2020"
version = "2020.12.3"
authors = ["Thomas Zumsteg <thomas.zumsteg@gmail.com>"]
edition = "2018"

[dependencies]
itertools="0.9.0"
regex="1.4.2"

[lib]
name = "common"
path = "lib.rs"

[[bin]]
name = "day01"
path = "day01.rs"

[[bin]]
name = "day02"
path = "day02.rs"

[[bin]]
name = "day03"
path = "day03.rs"

[[bin]]
name = "day04"
path = "day04.rs"

[[bin]]
name = "day05"
path = "day05.rs"
